<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ComoFuncionaActivity"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imgLogoInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/iconapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imgPrincipalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/pessoasmulher"
        app:layout_constraintTop_toBottomOf="@id/imgLogoInformation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txtTituloInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzlregular"
        android:text="@string/dicasreciclagem"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/imgPrincipalInformation"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"/>

    <Button
        android:id="@+id/bttnStepInformation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorSegmentedControl"
        android:text="@string/proximo"
        android:textColor="@android:color/white"
        android:fontFamily="@font/stolzlregular" />

    <TextView
        android:id="@+id/txtHeadInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzlregular"
        android:text="@string/dica1"
        android:textColor="@color/txtinformation"
        app:layout_constraintTop_toBottomOf="@id/txtTituloInformation"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"/>

    <ImageButton
        android:id="@+id/backToMap"
        android:src="@mipmap/closeinformation"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>