<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InformationActivity"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imageStepOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@mipmap/groupthree"
        android:layout_marginBottom="150dp"/>


    <ImageView
        android:id="@+id/imageCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logorecyclewhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="200dp"
        android:text="@string/bem_vindo"
        android:textColor="@android:color/white"
        android:fontFamily="@font/stolzlregular"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/steponePrincipal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/stolzlregular"
        android:textColor="@color/colorPrincipal"
        />

    <ImageView
        android:id="@+id/imagestep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/stepone"
        app:layout_constraintTop_toBottomOf="@id/txtPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>


    <Button
        android:id="@+id/bttnStep"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorSegmentedControl"
        android:text="@string/proximo"
        android:textColor="@android:color/white"
        android:fontFamily="@font/stolzlregular" />


</androidx.constraintlayout.widget.ConstraintLayout>