<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activity.MapaActivity"
    android:background="@color/colorPrimaryDark">


    <com.google.android.gms.maps.MapView
        android:id="@+id/Mapa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        android:layout_marginTop="10dp"
        android:visibility="gone" />
    
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/iconapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

        <segmented_control.widget.custom.android.com.segmentedcontrol.SegmentedControl
            android:id="@+id/SegmentedControl"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:columnCount="2"
            app:segments="@array/ItemsSegmentedControl"
            app:unSelectedTextColor="@android:color/white"
            app:selectedTextColor="@android:color/white"
            app:unSelectedStrokeColor="@android:color/white"
            app:textSize="18sp"
            app:textVerticalPadding="6dp"
            app:radius="12dp"
            app:selectedBackgroundColor="@color/colorSegmentedControl"
            app:selectedStrokeColor="@color/colorSegmentedControl"
            />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        app:layout_constraintBottom_toTopOf="@id/SearchCEP"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <ImageButton
        android:id="@+id/bttnClose"
        android:src="@mipmap/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        app:layout_constraintBottom_toTopOf="@id/imageSaibaMais"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/txtSaibaMais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzlregular"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        app:layout_constraintBottom_toTopOf="@id/SearchCEP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/saibamais"
        android:textColor="@android:color/white"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="50dp"/>

    <ImageView
        android:id="@+id/imageSaibaMais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/desone"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        app:layout_constraintStart_toEndOf="@id/txtSaibaMais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/SearchCEP"/>

    <Button
        android:id="@+id/bttnSaibaMais"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:textColor="@color/comofuncionatext"
        android:background="@drawable/buttoncomofunciona"
        android:text="@string/comofunciona"
        app:layout_constraintTop_toBottomOf="@id/txtSaibaMais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/SearchCEP"
        app:layout_constraintEnd_toStartOf="@id/imageSaibaMais"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"/>

    <SearchView
        android:id="@+id/SearchCEP"
        android:layout_width="380dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:queryHint="@string/MapaActivitySearchHint"
        android:iconifiedByDefault="false"
        android:background="@drawable/searchviewrounded"
        android:queryBackground="@android:color/transparent"
        android:layout_marginTop="200dp"
        android:inputType="number"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/SearchCEP"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPontos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:scrollbarSize="10dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ImageButton
        android:id="@+id/bttnLess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:src="@mipmap/buttonminus"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/bttnLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:src="@mipmap/buttonrouter"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/bttnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/bttnLess"
        app:layout_constraintTop_toBottomOf="@id/SegmentedControl"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:src="@mipmap/buttonplus"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:background="@android:color/transparent" />


</androidx.constraintlayout.widget.ConstraintLayout>